# EasyFin_EABD_project

./: .gitignore  01_receiver.py  02_exchang_and_clock.py  02_exchange_and_clock.py  03_buffer_to_redis.py  04_dashboard.py  BTR_Dockerfile  Dockerfile  Dockerfile_02_exchange_and_clock  README.md  Wrong Outlier Y-finance.txt  captain-definition  chart.py  consumer_1.py  consumer_2.py  docker-compose.yml  producer.py  pyproject.toml  shared_buffer.py  streamlit.py  streamlit2.py  test.py  test_2.py
outdated/: streamlit.py
