[project]
name = "dig-data-finance-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "certifi>=2025.6.15",
    "kafka>=1.3.5",
    "kafka-python>=2.2.12",
    "plotly>=6.1.2",
    "quixstreams>=3.16.1",
    "redis>=6.2.0",
    "streamlit>=1.46.0",
    "streamlit-autorefresh>=1.0.1",
    "yfinance>=0.2.63",
]
